--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,8 @@ jobs:
         with:
             # path: . # The root location of your Astro project inside the repository. (optional)
             node-version: 20
-            package-manager: pnpm@8.9.2
+            package-manager: pnpm
+            pnpm-version: 8.9.2
 
   deploy:
     needs: build
