--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
     "sass": "^1.68.0",
+    "sharp": "^0.33.2",
     "stylelint": "^15.10.3",
     "stylelint-config-idiomatic-css": "^1.1.0",
     "stylelint-config-prettier": "^9.0.5",
