--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           # path: . # The root location of your Astro project inside the repository. (optional)
           node-version: '20'
           package-manager: pnpm
-          pnpm-version: '8.9.2'
+          # pnpm-version: '8.9.2'
 
   deploy:
     needs: build
