--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,21 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - name: Install, build, and upload your site
-        uses: withastro/action@v1.0.6  # Update to the latest version that supports Node.js 20
+      - name: Install, build, and upload your site output
+        uses: withastro/action@v1
         with:
-          # path: . # The root location of your Astro project inside the repository. (optional)
-          node-version: '20'
-          package-manager: pnpm
-          version: '8.9.2'
+          package-manager: pnpm@8.9.2
+            # path: . # The root location of your Astro project inside the repository. (optional)
+            # node-version: 18 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
+            # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ needs.build.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2.0.0  # Update to the latest version that supports Node.js 20
+        uses: actions/deploy-pages@v3
