--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install, build, and upload your site output
         uses: withastro/action@v1
         with:
+          node-version: v20.8.0
           package-manager: pnpm@8.9.2
             # path: . # The root location of your Astro project inside the repository. (optional)
             # node-version: 18 # The specific version of Node that should be used to build your site. Defaults to 18. (optional)
