--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.9",
     "@fontsource/barlow": "^5.0.8",
     "@fontsource/barlow-condensed": "^5.0.8",
     "@fontsource/bellefair": "^5.0.8",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.2.1",
-    "astro-icon": "^1.0.2"
+    "astro-icon": "^1.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@csstools/postcss-global-data": "^2.1.0",
