--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.10",
-    "@fontsource/barlow": "^5.0.8",
-    "@fontsource/barlow-condensed": "^5.0.8",
-    "@fontsource/bellefair": "^5.0.8",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.4.0",
+    "astro-font": "^0.0.80",
     "astro-icon": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
