--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-plugin-logical-css": "^1.2.1"
-  }
+  },
+  "packageManager": "pnpm@8.9.2"
 }
