--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-plugin-logical-css": "^1.2.1"
   },
-  "packageManager": "pnpm@8.9.2"
+  "packageManager": "pnpm@8.10.5+sha1.4370a069f21873a0ad83c785b8048ed8caf6e6e9"
 }
