--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
   "css.validate": false,
   "scss.validate": false,
 
-  "stylelint.validate": ["css", "scss"],
+  // "stylelint.validate": ["css", "scss"],
 
   "prettier.documentSelectors": ["**/*.astro"],
 
